\name{NEWS}
\title{News for Package "Recosystem"}

\section{Changes in Recosystem version 0.2}{
  \itemize{
    \item Now linking to Rcpp11.
    \item A new parameter \code{verbose} to control output information.
  }
}

\section{Changes in Recosystem version 0.1}{
  \itemize{
    \item Initial version.
  }
}
 
  