@@ -1,7 +1,7 @@
-Package: Recosystem
+Package: recosystem
 Type: Package
 Title: Recommender System using Matrix Factorization
-Version: 0.2
+Version: 0.2.1
 Date: 2014-09-03
 Author: Chih-Jen Lin, Yu-Chin Juan, Yong Zhuang, and Wei-Sheng Chin for
     the original C++ code, Yixuan Qiu for the R wrapper
