@@ -1,3 +1,3 @@
-useDynLib(Recosystem)
+useDynLib(recosystem)
 import(methods)
 export(Reco)
