@@ -1,14 +1,20 @@
 \name{NEWS}
-\title{News for Package "Recosystem"}
+\title{News for Package "recosystem"}
 
-\section{Changes in Recosystem version 0.2}{
+\section{Changes in recosystem version 0.2.1}{
+  \itemize{
+    \item Change package name from \pkg{Recosystem} to \pkg{recosystem}.
+  }
+}
+
+\section{Changes in recosystem version 0.2}{
   \itemize{
     \item Now linking to Rcpp11.
     \item A new parameter \code{verbose} to control output information.
   }
 }
 
-\section{Changes in Recosystem version 0.1}{
+\section{Changes in recosystem version 0.1}{
   \itemize{
     \item Initial version.
   }
